Avoid overlap (#719)
* Bring file-header above pr-toolbar to avoid tooltip clipping

* Whitespace

* Match "Copy path"'s tooltip direction to siblings'

--- a/extension/content.css
+++ b/extension/content.css
@@ -690,16 +690,19 @@ a.tabnav-extra[href$="mastering-markdown/"] {
 
 /* Sticky file headers on pull request diff view */
 .pull-request-tab-content .diff-view .file-header {
-    position: sticky;
-    top: 60px;
-    z-index: 10;
+	position: sticky;
+	top: 60px;
+	z-index: 29; /* Just above .pr-toolbar */
+}
+.pr-toolbar-shadow {
+	z-index: 30; /* Just above .file-header */
 }
 
 /* Sticky file headers in regular file view */
 .file .file-header {
-    position: sticky;
-    top: 0;
-    z-index: 10;
+	position: sticky;
+	top: 0;
+	z-index: 10;
 }
 
 /* Remove annoying "helpful" banners */
